# iot-gateway

./: .gitignore  Config.in  Makefile  README.md  add-driver-for-Motorcomm-YT85xx+PHYs.patch  external.desc  external.mk
board/bananapi/m2-zero/: boot.cmd  genimage.cfg  linux-extras.config  readme.txt
buildroot-external/: Config.in  external.desc  external.mk
buildroot-external/configs/: amedia_x96-max-plus_defconfig  bananapi_m2-zero_defconfig  haoyu_a20_marsboard_defconfig  imx6dl_sabresd_defconfig  orangepi_3_lts_defconfig  orangepi_4_lts_defconfig  orangepi_4lts_defconfig  orangepi_zero2_defconfig  sipeed_lichee-rv_defconfig
buildroot-external/package_source/le-gateway/: CMakeLists.txt  main.cpp
buildroot-external/package_source/le-gateway/bluez-dbus/xml/: adapter-api.xml  advertisement-monitor-api.xml  agent-api.xml  batter-api.xml  device-api.xml  gatt-api.xml  health-api.xml  input-api.xml  network-api.xml
buildroot-external/package_source/le-gateway/connman-dbus/xml/: manager-api.xml  peer-api.xml  session-api.xml  vpn-connection-api.xml
configs/: bananapi_m2-zero_defconfig  haoyu_a20_marsboard_defconfig  orangepi_3_lts_defconfig
package/le-gateway/: le-gateway.mk
package/libspacenorm/: Config.in  libspacenorm.mk
package/mesh-gateway/: Config.in  mesh-gateway.mk
package/nlohmannjson/: Config.in  nlohmannjson.hash  nlohmannjson.mk
package/plog/: Config.in  plog.hash
package/sdbuscpp/: Config.in.host  sdbuscpp.hash  sdbuscpp.mk
patches/: u-boot-add_new_a20_marsboard.patch
pkg_src/le-gateway/: main.cpp
tools/: patch_renamer.py
(+143 files in other folders)
